# AniNotify

./: .gitignore  README.md  pyproject.toml
aninotify/: config.py  main.py
aninotify/handler/: menu.py  parser.py  parser_check.py  telegram.py
