[tool.poetry]
name = "aninotify"
version = "0.1.0"
description = ""
authors = ["Алексей Иликаев <leshaphantom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pywebio = "^1.8.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
telebot = "^0.0.5"
bs4 = "^0.0.2"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
